--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -43,7 +43,7 @@ http {
             add_header  Cache-Control "public";
             expires     30d;
 {% endif %}
-            alias {{ STATIC_ROOT }};
+            alias {{ STATIC_LOCATION }};
         }
 
 {% if PROXY %}       
