--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -53,8 +53,9 @@ http {
             proxy_redirect off;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Scheme $scheme;
-            proxy_connect_timeout 10;
-            proxy_read_timeout 10;
+            proxy_connect_timeout      {{ PROXY_CONNECT_TIMEOUT | default(60) }}s;
+            proxy_send_timeout         {{ PROXY_SEND_TIMEOUT | default(60) }}s;
+            proxy_read_timeout         {{ PROXY_READ_TIMEOUT | default(60) }}s;
             proxy_pass {{ PROXY_PASS }};
         }
 {% endif %}
